[package]
name = "tonsail-server"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "tonsail-server"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "prisma-cli"]

[dependencies]
axum = "0.6.2"
config = "0.13.3"
http = "0.2.8"
hyper = { version = "0.14.23", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["time", "env-filter"] }
validator = { version = "0.16.0", features = ["derive"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", features = [
  "mysql", "mocking"
], tag = "0.6.4", default-features = false }
dotenvy = "0.15.6"
serde-aux = "4.1.2"
axum-login = "0.4.1"
rand = { version = "0.8.5", features = ["std", "min_const_gen"] }
eyre = "0.6.8"
nanoid = "0.4.0"
argon2 = "0.4.1"
bb8 = "0.8.0"
bb8-postgres = "0.8.1"
tokio-postgres = "0.7.7"
postgres-types = { version = "0.2.4", features = ["derive", "with-chrono-0_4"] }
sea-query = { version = "0.28.3", features = ["derive"] }
thiserror = "1.0.38"
fred = { git = "https://github.com/aembke/fred.rs.git", features = ["partial-tracing", "enable-rustls"] }
futures = "0.3.26"
unicode-segmentation = "1.10.1"
backon = "0.4.0"
